--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
           for dir in ${DIRS[@]}; do
-            scp -P ${{ secrets.SSH_PORT }} -i ~/.ssh/id_ed25519 -r ./translations/* root@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/
+            scp -P ${{ secrets.SSH_PORT }} -i ~/.ssh/id_ed25519 -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/
           done
