--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -13,12 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: 配置 SSH 私钥
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ./ssh_privkey
+          chmod 600 ./ssh_privkey
       - name: 上传翻译文件
         run: |
           DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
           for dir in ${DIRS[@]}; do
-            scp -P ${{ secrets.SSH_PORT }} -i ~/.ssh/id_ed25519 -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/
+            scp -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/
           done
