--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -19,5 +19,5 @@ jobs:
         run: |
           DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
           for dir in ${DIRS[@]}; do
-            scp -v -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/
+            scp -v -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/test/$dir/translations/ -o StrictHostKeyChecking=no
           done
