--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -19,6 +19,9 @@ jobs:
           chmod 600 ./ssh_privkey
       - name: 上传翻译文件
         run: |
+          # 删除所有名字包含.ignore.的文件
+          find ./translations/ -name "*.ignore.*" -delete
+          # 上传翻译文件到服务器
           DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
           for dir in ${DIRS[@]}; do
             scp -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/mcservers/$dir/ || true
