--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -21,9 +21,8 @@ jobs:
         run: |
           # 删除所有名字包含.ignore.的文件
           find ./translations/ -name "*.ignore.*" -delete
-          ls ./translations/CMI/Translations/
           # 上传翻译文件到服务器
           DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
           for dir in ${DIRS[@]}; do
-            scp -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/mcservers/$dir/ || true
+            scp -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/mcservers/$dir/plugins || true
           done
