--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -22,7 +22,7 @@ jobs:
           # 删除所有名字包含.ignore.的文件
           find ./translations/ -name "*.ignore.*" -delete
           # 上传翻译文件到服务器
-          DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeun_10003")
+          DIRS=("authserver_15000" "survival_10001" "missilewars_10002" "dungeon_10003" "test_10004")
           for dir in ${DIRS[@]}; do
             scp -o StrictHostKeyChecking=no -P ${{ secrets.SSH_PORT }} -i ./ssh_privkey -r ./translations/* toilet@${{ secrets.SSH_HOST }}:/home/toilet/mcservers/$dir/plugins || true
           done
